--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==5.0.1
 django-bootstrap4==24.1
 django-jazzmin==2.6.0
 django-shortuuidfield==0.1.3
+django-taggit==5.0.1
 pillow==10.2.0
 psycopg2-binary==2.9.9
 shortuuid==1.0.13
