--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.7.2
 beautifulsoup4==4.12.3
 Django==5.0.1
 django-bootstrap4==24.1
+django-ckeditor==6.7.1
 django-jazzmin==2.6.0
+django-js-asset==2.2.0
 django-shortuuidfield==0.1.3
 django-taggit==5.0.1
 pillow==10.2.0
